force-app/main/default/objects/Int_Delivery_Control__c/Int_Delivery_Control__c.object-meta.xml
<CustomObject>
    <description>Int Delivery Control</description>
    <label>Int Delivery Control</label>
    <nameField>
        <displayFormat>DEL-{0000000000}</displayFormat>
        <label>Delivery Control Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Delivery Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>