force-app/main/default/objects/Int_Delivery_Control__c/fields/End_Of_Day_Indicator__c.field-meta.xml
<CustomField>
    <fullName>End_Of_Day_Indicator__c</fullName>
    <description>End Of Day Indicator</description>
    <label>End Of Day Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>