force-app/main/default/objects/Int_Delivery_Control__c/fields/Extraction_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Extraction_DateTime__c</fullName>
    <description>Extraction DateTime</description>
    <label>Extraction DateTime</label>
    <length>20</length>
    <type>Text</type>
</CustomField>