force-app/main/default/objects/Int_Delivery_Control__c/fields/Interface_Version__c.field-meta.xml
<CustomField>
    <fullName>Interface_Version__c</fullName>
    <description>Interface Version</description>
    <label>Interface Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>