force-app/main/default/objects/Int_Delivery_Control__c/fields/Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Date__c</fullName>
    <description>Reporting Date</description>
    <label>Reporting Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>