force-app/main/default/objects/Int_Delivery_Control__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>Source System</description>
    <label>Source System</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>